# pylab

./: .gitignore  pyproject.toml  spammodule.c
Planetary/: main.py  pyproject.toml
audio_player/: main.py  pyproject.toml
deep_learning_for_coders/: Untitled.ipynb  main.py  pyproject.toml
elf/: hello  main.py  obj.txt  pyproject.toml  test
neuran/: Untitled.ipynb  main.py  pyproject.toml
scikit_learn_lab/: Untitled.ipynb  Untitled1.ipynb  cancer.ipynb  iris.ipynb  pyproject.toml
wisper/: listener.py  main.py  pyproject.toml
