[project]
name = "pylab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "audio_player",
    "scikit_learn_lab",
    "neuran",
    "deep_learning_for_coders",
    "D",
    "automateboringstuf",
    "elf",
    "wisper",
    "Planetary",
]
